authentication for user and admin done

--- a/css/footer.css
+++ b/css/footer.css
@@ -1,5 +1,5 @@
 .footer {
-  background-color: #fff;
+  background-color: #D0C3B8;
   padding: 40px 80px;
   border-top: 1px solid #ddd;
   font-family: Arial, sans-serif;
