--- a/css/navbar.css
+++ b/css/navbar.css
@@ -14,6 +14,7 @@ header{
         align-items: center;
         position: relative;
         color: #724E31;
+        
 }
 .nav-center{
     position: absolute;
@@ -23,8 +24,53 @@ header{
 }
 .nav-center ul li{
     list-style-type: none;
-    display:inline;
+    display: inline;
     padding: 15px;
 }
 
+.nav-center ul li a {
+    text-decoration: none;
+}
+
+.nav-center ul li a:hover {
+    background-color: #B98E2F;
+    padding: 10px;
+    border-radius: 10px;
+    color: white;
+}
+
+
+.account-menu {
+            position: relative;
+            display: inline-block;
+        }
+
+        .dropdown {
+            display: none;
+            position: absolute;
+            right: 0;
+            background: #fff;
+            border: 1px solid #ccc;
+            border-radius: 8px;
+            box-shadow: 0 4px 8px rgba(0,0,0,0.15);
+            min-width: 150px;
+            z-index: 100;
+        }
+
+        .dropdown a {
+            display: block;
+            padding: 10px;
+            text-decoration: none;
+            color: black;
+        }
+
+        .dropdown a:hover {
+            background: #E8CAA0;
+            font-weight: bold;
+            
+        }
+
+        .account-menu:hover .dropdown {
+            display: block;
+        }
 
